Fix spacing's

--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -48,7 +48,7 @@ div.hidden {
 
 .row {
   margin: auto;
-  padding: 10px;
+  padding: 15px 10px;
   width: 90%;
 }
 
@@ -72,8 +72,11 @@ div.hidden {
 }
 
 .search-button {
+  border: none;
+  border-left: 1px solid #eee;
   padding: 12px 50px;
-  border-radius: 0 20px 20px 0;
+  background-color: white;
+  outline: none;
 }
 
 .search-button:hover {
@@ -99,7 +102,7 @@ div.hidden {
 
 .frame-set {
   overflow-y: auto;
-  margin: 10px 0;
+  margin: 15px 0;
   padding: 20px;
 }
 
@@ -115,12 +118,13 @@ div.hidden {
 }
 
 .pages {
+  margin: 10px 0;
   width: 100%;
   display: flex;
 }
 
 .page-no {
-  padding: 8px;
+  padding: 18px;
   font-size: 12px;
 }
 
@@ -129,7 +133,7 @@ div.hidden {
 }
 
 .page-list {
-  padding: 0 6px;
+  padding: 5px 10px;
   font-size: 20px;
   border: 1px solid #eee;
   display: inline-table;
@@ -151,7 +155,7 @@ div.hidden {
 }
 
 .items {
-  padding: 10px;
+  padding: 15px;
   display: flex;
 }
 
@@ -223,15 +227,12 @@ div.hidden {
 }
 
 .org-info {
+  margin-top: 20px;
   display: flex;
 }
 
 .left-list {
   width: 50%;
-}
-
-.info {
-  font-size: x-small;
 }
 
 .about-head {
@@ -249,7 +250,6 @@ div.hidden {
 
 .footer {
   position: relative;
-  margin-top: 5px;
 }
 
 .website-info, .info-list, .head {
@@ -257,7 +257,7 @@ div.hidden {
 }
 
 .website-info {
-  margin: 0 10%;
+  margin: 2% 22% 5%;
 }
 
 .head {
